--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" media="(max-width:470px)" href="resources/css/max-width470px.css">
+    <link rel="stylesheet" type="text/css" media="(max-width:600px)" href="resources/css/min-width471px_max-width600px.css">
+    <link rel="stylesheet" type="text/css" media="(max-width:768px)" href="resources/css/min-width601px_max-width768px.css">
+    <link rel="stylesheet" type="text/css" media="(max-width:1024px)" href="resources/css/min-width769px-max-width1024px.css">
     <title>Colmar Academy</title>
   </head>
   <body>
@@ -30,7 +34,7 @@
       <!-- nav mobile -->
 
       <div class="icons icons--hide">
-        <img class="icon__svg" a href="#" src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
+        <img class="icon__svg icon__svg--hide" a href="#" src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
         <img class="icon__svg" a href="#" src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
         <img class="icon__svg" a href="#" src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
         <img class="icon__svg" a href="#" src="./resources/images/ic-login.svg" alt="Person Icon/Login">
@@ -44,18 +48,18 @@
 
       <div class="col">
 
-          <div class="col__pic-container">
+          <div class="pic-container">
             <img src="./resources/images/banner.jpg">
           </div>
 
       </div>
 
-      <div class="col-s col--center-content"><!--s=small-->
+      <div class="col-s col-s--center"><!--s=small-->
 
-          <div class="col-s__banner">
+          <div class="text-box-banner">
             <h1>Learn something new everyday</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-            <button class="btn"><a class="col-s-btn__link" href="#">Start here</a></button>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <a class="btn" href="#"><span class="btn_text">Start here</span></a>
           </div>
 
       </div>
@@ -68,12 +72,12 @@
 
         <div class="col">
 
-            <div class="col__pic-container col__pic-container--hide">
+            <div class="pic-container pic-container--hide">
                 <img src="./resources/images/information-main.jpg">
-              <div class="col__text">
-                <h1>It doesn't hurt to keep practicing</h1>
+              <div class="text-box">
+                <h2>It doesn't hurt to keep practicing</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
-                <span class="col__name"> Emanuel, Sr. Strategist at Hiring.com</span>
+                <span class="text-box__name-font"> Emanuel, Sr. Strategist at Hiring.com</span>
               </div>
             </div>
 
@@ -83,37 +87,37 @@
 
             <div class="col-s__container">
               <div class="col-s__pic-container">
-                <img class="col-s__pic-desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
-                <img class="col-s__pic-mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
+                <img class="pic-desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
+                <img class="pic-mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
               </div>
-              <div class="col-s__text">
+              <div class="text-box-s">
                 <h3>Orientation Date </h3>
-                <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
-                <span><a href="#">Read more</a></span>
+                <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
+                <span class="link"><a href="#">Read more...</a></span>
               </div>
             </div>
 
           <div class="col-s__container">
             <div class="col-s__pic-container">
-              <img class="col-s__pic-desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
-              <img class="col-s__pic-mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
+              <img class="pic-desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
+              <img class="pic-mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
             </div>
-            <div class="col-s__text">
+            <div class="text-box-s">
               <h3>Our Campus</h3>
-              <h4>Find which campus is colse by you</h4>
-              <span><a href="#">Read more</a></span>
+              <p>Find which campus is colse by you</p>
+              <span class="link"><a href="#">Read more...</a></span>
             </div>
           </div>
 
-          <div class="col-s__container col-s__container--margin-bottom">
+          <div class="col-s__container">
             <div class="col-s__pic-container">
-              <img class="col-s__pic-desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
-              <img class="col-s__pic-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
+              <img class="pic-desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
+              <img class="pic-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
             </div>
-            <div class="col-s__text">
+            <div class="text-box-s">
               <h3>Our Guest Lecture</h3>
-              <h4>Join a keynote with Oliver Sack about Music in medical treatment</h4>
-              <span><a href="#">Read more</a></span>
+              <p>Join a keynote with Oliver Sack about Music in medical treatment</p>
+              <span class="link link--padding"><a href="#">Read more...</a></span>
             </div>
           </div>
 
@@ -122,139 +126,144 @@
 
     <!--2nd gray/picture gallery section-->
 
-    <section class="section section--gray section--column section--mobile">
+    <section class="section section--gray section--column section--nopadding section--mobile">
 
-      <h2>Start learning</h2>
+      <div class="text-box text-box--aligncenter">
+        <h2>Start learning</h2>
+      </div>
 
-        <div class="courses">
-          <div class="courses__container">
-            <div class="courses__pic-container">
-              <img src="./resources/images/course-software.jpg">
-            </div>
-            <div class="course__info">
-              <h3>Software engineering</h3>
-              <span class="course">Courses</span>
-              <p> Web Development, Mobile</p>
-              <p> Web Development, iOT, APIs</p>
-            </div>
+      <div class="courses courses--border">
+
+        <div class="courses__container">
+          <div class="courses__pic-container">
+            <img src="./resources/images/course-software.jpg">
           </div>
-
-          <div class="courses__container courses__container--center">
-            <div class="courses__pic-container">
-              <img src="./resources/images/course-computer-art.jpg">
-            </div>
-            <div class="course__info">
-              <h3>Computer Art</h3>
-              <span>Courses</span>
-              <p> Imaging & Design, Web Design,</p>
-              <p> Motion Grafphics & Visula Effects,</p>
-              <p> Computer Animation <p>
-            </div>
+          <div class="text-box-courses">
+            <h3>Software Engineering</h3>
+            <p>Courses</p>
+            <span> Web Development, Mobile</span>
+            <span> Web Development, iOT, APIs</span>
           </div>
+        </div>
 
-          <div class="courses__container">
-            <div class="courses__pic-container">
-              <img src="./resources/images/course-design.jpg">
-            </div>
-            <div class="course__info">
-              <h3>Design</h3>
-              <span class="course">Courses</span>
-              <p> User Experience Design, User</p>
-              <p> Research, Visual Design</p>
-            </div>
+        <div class="courses__container courses__container--center">
+          <div class="courses__pic-container">
+            <img src="./resources/images/course-computer-art.jpg">
           </div>
-
-          <div class="courses__container">
-            <div class="courses__pic-container">
-              <img src="./resources/images/course-data.jpg">
-            </div>
-            <div class="course__info">
-              <h3>Data</h3>
-              <span class="course">Courses</span>
-              <p> Data Science, Big Data, SQL, Data</p>
-              <p> Visualization</p>
-            </div>
+          <div class="text-box-courses">
+            <h3>Computer Art</h3>
+            <p>Courses</p>
+            <span> Imaging & Design, Web Design,</span>
+            <span> Motion Grafphics & Visula Effects,</span>
+            <span> Computer Animation <span>
           </div>
+        </div>
 
-          <div class="courses__container courses__container--center">
-            <div class="courses__pic-container">
-              <img src="./resources/images/course-business.jpg">
-            </div>
-            <div class="course__info">
-              <h3>Business</h3>
-              <span class="course">Courses</span>
-              <p> Product Development, Business</p>
-              <p> Development, Startup</p>
-            </div>
+        <div class="courses__container">
+          <div class="courses__pic-container">
+            <img src="./resources/images/course-design.jpg">
           </div>
+          <div class="text-box-courses">
+            <h3>Design</h3>
+            <p>Courses</p>
+            <span> User Experience Design, User</span>
+            <span> Research, Visual Design</span>
+          </div>
+        </div>
 
-          <div class="courses__container">
-            <div class="courses__pic-container">
-              <img src="./resources/images/course-marketing.jpg">
-            </div>
-            <div class="course__info">
-              <h3>Marketing</h3>
-              <span class="course">Courses</span>
-              <p> Analystics, Content Marketing,</p>
-              <p> Mobile Marketing</p>
-            </div>
-           </div>
+        <div class="courses__container">
+          <div class="courses__pic-container">
+            <img src="./resources/images/course-data.jpg">
+          </div>
+          <div class="text-box-courses">
+            <h3>Data</h3>
+            <p class="text-box__courses">Courses</p>
+            <span class="text-box__course"> Data Science, Big Data, SQL, Data</span>
+            <span class="text-box__course"> Visualization</span>
+          </div>
+        </div>
 
+        <div class="courses__container courses__container--center">
+          <div class="courses__pic-container">
+            <img src="./resources/images/course-business.jpg">
+          </div>
+          <div class="text-box-courses">
+            <h3>Business</h3>
+            <p>Courses</p>
+            <span> Product Development, Business</span>
+            <span> Development, Startup</span>
+          </div>
+        </div>
+
+        <div class="courses__container">
+          <div class="courses__pic-container">
+            <img src="./resources/images/course-marketing.jpg">
+          </div>
+          <div class="text-box-courses">
+            <h3>Marketing</h3>
+            <p>Courses</p>
+            <span> Analystics, Content Marketing,</span>
+            <span> Mobile Marketing</span>
+          </div>
          </div>
-     </section>
 
+       </div>
+     </section>
 
     <!-- 2nd white/information section -->
     <section class="section section--white section--column">
 
-      <h2>Thesis exhibit</h2>
-        <div class="section__container"> <!--flex: row. couldn't find out why necessary-->
-          <div class="col">
-            <div class="col__container">
-              <video class="col__video-container" controls>
-                <source src="./resources/videos/thesis.mp4" type="video/mp4">
-                  You browser does not support HTML5 video
-              </video>
-              <div class="col__text col__text--hide">
-                <h1>It doesn't hurt to keep practicing</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              </div>
+      <div class="text-box text-box--aligncenter">
+        <h2>Thesis exhibit</h2>
+      </div>
+
+      <div class="section--flexrow">
+        <div class="col">
+          <div class="col__container">
+            <video class="video-container" controls>
+              <source class="video"src="./resources/videos/thesis.mp4" type="video/mp4">
+                You browser does not support HTML5 video
+            </video>
+            <div class="text-box text-box--hide">
+              <h2>It doesn't hurt to keep practicing</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
-
-          <div class="col-s col--border col-s--hide">
-            <div class="col-s__container fisma">
-              <div class="col-s__pic-container">
-                  <img class="col-s__pic-desktop" src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
-              </div>
-              <div class="col-s__text">
-                <h3> Fisma </h3>
-                <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
-                <span><a href="#">Read more</a></span>
-              </div>
-            </div>
-            <div class="col-s__container now-and-then">
-              <div class="col-s__pic-container">
-                  <img class="col-s__pic-desktop" src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then">
-              </div>
-              <div class="col-s__text">
-                <h3> Now-and-then </h3>
-                <h4>Tue10/11 & Wed 10/12: 8am-3pm</h4>
-                <span><a href="#">Read more</a></span>
-              </div>
-            </div>
-          </div>
-
         </div>
-      </section>
+
+        <div class="col-s col--border col-s--hide">
+          <div class="col-s__container fisma">
+            <div class="col-s__pic-container">
+                <img class="pic-desktop" src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
+            </div>
+            <div class="text-box text-box-s">
+              <h3> Fisma </h3>
+              <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
+              <span class="link"><a href="#">Read more...</a></span>
+            </div>
+          </div>
+          <div class="col-s__container now-and-then">
+            <div class="col-s__pic-container">
+                <img class="pic-desktop" src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then">
+            </div>
+            <div class="text-box text-box-s">
+              <h3> Now-and-then </h3>
+              <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
+              <span class="link"><a href="#">Read more...</a></span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
 
     <!-- Footer section-->
 
     <footer>
       <span class="copyright">&#169; 2016 Colmar Academy. All rights reserved</span>
-      <nav class="nav-footer">
-        <span><a class="nav-footer__link nav-footer--padding" href="#">Terms<a/></span>
-        <span><a class="nav-footer__link nav-footer--padding" href="#">Privacy</a></span>
+      <nav class="nav nav--alignitems nav--hide">
+        <span><a class="nav__link nav--padding" href="#">Terms<a/></span>
+        <span><a class="nav__link nav--padding" href="#">Privacy</a></span>
       </nav>
     </footer>
 
