--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
 
       <div class="logo">
-        <img  class="logo__picture"src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
+        <img  class="logo__icon"src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
         <span class="logo__text logo--red">COLMAR</span>
         <span class="logo__text">ACADEMY</span>
       </div>
@@ -93,7 +93,7 @@
               <div class="text-box-s">
                 <h3>Orientation Date </h3>
                 <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-                <span class="link"><a href="#">Read more...</a></span>
+                <span class="link"><a href="#">Read more</a></span>
               </div>
             </div>
 
@@ -105,11 +105,11 @@
             <div class="text-box-s">
               <h3>Our Campus</h3>
               <p>Find which campus is colse by you</p>
-              <span class="link"><a href="#">Read more...</a></span>
+              <span class="link"><a href="#">Read more</a></span>
             </div>
           </div>
 
-          <div class="col-s__container">
+          <div class="col-s__container col-s__container--margin">
             <div class="col-s__pic-container">
               <img class="pic-desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
               <img class="pic-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
@@ -117,7 +117,7 @@
             <div class="text-box-s">
               <h3>Our Guest Lecture</h3>
               <p>Join a keynote with Oliver Sack about Music in medical treatment</p>
-              <span class="link link--padding"><a href="#">Read more...</a></span>
+              <span class="link link--padding"><a href="#">Read more</a></span>
             </div>
           </div>
 
@@ -225,7 +225,7 @@
                 You browser does not support HTML5 video
             </video>
             <div class="text-box text-box--hide">
-              <h2>It doesn't hurt to keep practicing</h2>
+              <h2>Reimagine Urban</h2>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
@@ -239,7 +239,7 @@
             <div class="text-box text-box-s">
               <h3> Fisma </h3>
               <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-              <span class="link"><a href="#">Read more...</a></span>
+              <span class="link"><a href="#">Read more</a></span>
             </div>
           </div>
           <div class="col-s__container now-and-then">
@@ -249,7 +249,7 @@
             <div class="text-box text-box-s">
               <h3> Now-and-then </h3>
               <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-              <span class="link"><a href="#">Read more...</a></span>
+              <span class="link"><a href="#">Read more</a></span>
             </div>
           </div>
         </div>
@@ -262,8 +262,8 @@
     <footer>
       <span class="copyright">&#169; 2016 Colmar Academy. All rights reserved</span>
       <nav class="nav nav--alignitems nav--hide">
-        <span><a class="nav__link nav--padding" href="#">Terms<a/></span>
-        <span><a class="nav__link nav--padding" href="#">Privacy</a></span>
+        <span><a class="nav__link nav--padding nav--s-font" href="#">Terms<a/></span>
+        <span><a class="nav__link nav--padding nav--s-font" href="#">Privacy</a></span>
       </nav>
     </footer>
 
