--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="resources/images/favi.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" media="(max-width:470px)" href="resources/css/max-width470px.css">
@@ -24,7 +25,7 @@
         <span class="logo__text logo--red">COLMAR</span>
         <span class="logo__text">ACADEMY</span>
       </div>
-      <nav class="nav nav--hide">
+      <nav class="nav nav--hide" role="navigation">
         <span><a class="nav__link nav--padding" href="#">On campus</a></span>
         <span><a class="nav__link nav--padding" href="#">Online</a></span>
         <span><a class="nav__link nav--padding" href="#">For companies</a></span>
@@ -33,34 +34,34 @@
 
       <!-- nav mobile -->
 
-      <div class="icons icons--hide">
+      <nav class="icons icons--hide" role="navigation">
         <img class="icon__svg icon__svg--hide" a href="#" src="./resources/images/ic-logo.svg" alt="Colmar Academy Company Logo">
-        <img class="icon__svg" a href="#" src="./resources/images/ic-on-campus.svg" alt="Desk Icon">
-        <img class="icon__svg" a href="#" src="./resources/images/ic-online.svg" alt="Computer Monitor Icon">
-        <img class="icon__svg" a href="#" src="./resources/images/ic-login.svg" alt="Person Icon/Login">
-      </div>
+        <img class="icon__svg" a href="#" src="./resources/images/ic-on-campus.svg" alt="Student desk icon">
+        <img class="icon__svg" a href="#" src="./resources/images/ic-online.svg" alt="Computer monitor icon">
+        <img class="icon__svg" a href="#" src="./resources/images/ic-login.svg" alt="Personal icon for login">
+      </nav>
 
     </header>
 
     <!--1st gray/banner section-->
 
-    <section class="section section--gray">
+    <section class="section section--gray section--margintop" role="banner">
 
       <div class="col">
 
-          <div class="pic-container">
-            <img src="./resources/images/banner.jpg">
-          </div>
+        <div class="pic-container">
+          <img src="./resources/images/banner.jpg" alt="Students studying on campus">
+        </div>
 
       </div>
 
       <div class="col-s col-s--center"><!--s=small-->
 
-          <div class="text-box-banner">
-            <h1>Learn something new everyday</h1>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-            <a class="btn" href="#"><span class="btn_text">Start here</span></a>
-          </div>
+        <div class="text-box-banner" role="columnheader">
+          <h1>Learn something new everyday</h1>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+          <a class="btn" href="#" role="button"><span class="btn_text">Start here</span></a>
+        </div>
 
       </div>
 
@@ -68,75 +69,75 @@
 
     <!--1st white/information section-->
 
-    <section class="section section--white">
+    <section class="section section--white" role="main">
 
-        <div class="col">
+      <div class="col">
+        <div class="col__container">
+          <div class="pic-container pic-container--hide">
+            <img src="./resources/images/information-main.jpg" alt="Student reading on campus">
+          </div>
+          <div class="text-box text-box--hide" role="heading">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
+            <span class="text-box__name-font"> Emanuel, Sr. Strategist at Hiring.com</span>
+          </div>
+        </div>
+      </div>
 
-            <div class="pic-container pic-container--hide">
-                <img src="./resources/images/information-main.jpg">
-              <div class="text-box">
-                <h2>It doesn't hurt to keep practicing</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
-                <span class="text-box__name-font"> Emanuel, Sr. Strategist at Hiring.com</span>
-              </div>
-            </div>
+      <div class="col-s col--border">
 
+        <div class="col-s__container" role="region">
+          <div class="col-s__pic-container">
+            <img class="pic-desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
+            <img class="pic-mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
+          </div>
+          <div class="text-box-s">
+            <h3>Orientation Date </h3>
+            <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
+            <span class="link"><a href="#">Read more</a></span>
+          </div>
         </div>
 
-        <div class="col-s col--border">
-
-            <div class="col-s__container">
-              <div class="col-s__pic-container">
-                <img class="pic-desktop"src="./resources/images/information-orientation.jpg" alt="Students walking on campus in autumn">
-                <img class="pic-mobile" src="./resources/images/information-orientation-mobile.jpg" alt="Students walking on campus in autumn">
-              </div>
-              <div class="text-box-s">
-                <h3>Orientation Date </h3>
-                <p>Tue10/11 & Wed 10/12: 8am-3pm</p>
-                <span class="link"><a href="#">Read more</a></span>
-              </div>
-            </div>
-
-          <div class="col-s__container">
-            <div class="col-s__pic-container">
-              <img class="pic-desktop" src="./resources/images/information-campus.jpg" alt="Students studying in cafeteria">
-              <img class="pic-mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying in cafeteria">
-            </div>
-            <div class="text-box-s">
-              <h3>Our Campus</h3>
-              <p>Find which campus is colse by you</p>
-              <span class="link"><a href="#">Read more</a></span>
-            </div>
+        <div class="col-s__container" role="region">
+          <div class="col-s__pic-container">
+            <img class="pic-desktop" src="./resources/images/information-campus.jpg" alt="Students studying and eating in a cafeteria">
+            <img class="pic-mobile" src="./resources/images/information-campus-mobile.jpg" alt="Students studying and eating a in cafeteria">
           </div>
-
-          <div class="col-s__container col-s__container--margin">
-            <div class="col-s__pic-container">
-              <img class="pic-desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
-              <img class="pic-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
-            </div>
-            <div class="text-box-s">
-              <h3>Our Guest Lecture</h3>
-              <p>Join a keynote with Oliver Sack about Music in medical treatment</p>
-              <span class="link link--padding"><a href="#">Read more</a></span>
-            </div>
+          <div class="text-box-s">
+            <h3>Our Campus</h3>
+            <p>Find which campus is colse by you</p>
+            <span class="link"><a href="#">Read more</a></span>
           </div>
-
         </div>
+
+        <div class="col-s__container col-s__container--margin" role="region">
+          <div class="col-s__pic-container">
+            <img class="pic-desktop" src="./resources/images/information-guest-lecture.jpg" alt="Picture of lecturer Oliver Sack">
+            <img class="pic-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Picture of lecturer Oliver Sack">
+          </div>
+          <div class="text-box-s">
+            <h3>Our Guest Lecture</h3>
+            <p>Join a keynote with Oliver Sack about Music in medical treatment</p>
+            <span class="link link--padding"><a href="#">Read more</a></span>
+          </div>
+        </div>
+
+      </div>
     </section>
 
     <!--2nd gray/picture gallery section-->
 
-    <section class="section section--gray section--column section--nopadding section--mobile">
+    <section class="section section--gray section--column section--nopadding section--mobile" role="main">
 
-      <div class="text-box text-box--aligncenter">
+      <div class="text-box text-box--aligncenter" role="heading">
         <h2>Start learning</h2>
       </div>
 
       <div class="courses courses--border">
 
-        <div class="courses__container">
+        <div class="courses__container" role="region">
           <div class="courses__pic-container">
-            <img src="./resources/images/course-software.jpg">
+            <img src="./resources/images/course-software.jpg" alt="Computer monitors with coding information">
           </div>
           <div class="text-box-courses">
             <h3>Software Engineering</h3>
@@ -146,9 +147,9 @@
           </div>
         </div>
 
-        <div class="courses__container courses__container--center">
+        <div class="courses__container courses__container--center" role="region">
           <div class="courses__pic-container">
-            <img src="./resources/images/course-computer-art.jpg">
+            <img src="./resources/images/course-computer-art.jpg" alt="A person using an app on a smartphone">
           </div>
           <div class="text-box-courses">
             <h3>Computer Art</h3>
@@ -159,9 +160,9 @@
           </div>
         </div>
 
-        <div class="courses__container">
+        <div class="courses__container" role="region">
           <div class="courses__pic-container">
-            <img src="./resources/images/course-design.jpg">
+            <img src="./resources/images/course-design.jpg" alt="A person taking a picture with a vintage camera">
           </div>
           <div class="text-box-courses">
             <h3>Design</h3>
@@ -171,9 +172,9 @@
           </div>
         </div>
 
-        <div class="courses__container">
+        <div class="courses__container" role="region">
           <div class="courses__pic-container">
-            <img src="./resources/images/course-data.jpg">
+            <img src="./resources/images/course-data.jpg" alt="Open laptop showing data in graphs and charts">
           </div>
           <div class="text-box-courses">
             <h3>Data</h3>
@@ -183,9 +184,9 @@
           </div>
         </div>
 
-        <div class="courses__container courses__container--center">
+        <div class="courses__container courses__container--center" role="region">
           <div class="courses__pic-container">
-            <img src="./resources/images/course-business.jpg">
+            <img src="./resources/images/course-business.jpg" alt="Wooden chess board">
           </div>
           <div class="text-box-courses">
             <h3>Business</h3>
@@ -195,9 +196,9 @@
           </div>
         </div>
 
-        <div class="courses__container">
+        <div class="courses__container" role="region">
           <div class="courses__pic-container">
-            <img src="./resources/images/course-marketing.jpg">
+            <img src="./resources/images/course-marketing.jpg" alt="A person checking information on a smartwatch">
           </div>
           <div class="text-box-courses">
             <h3>Marketing</h3>
@@ -211,20 +212,20 @@
      </section>
 
     <!-- 2nd white/information section -->
-    <section class="section section--white section--column">
+    <section class="section section--white section--column" role="main">
 
-      <div class="text-box text-box--aligncenter">
+      <div class="text-box text-box--aligncenter" role="heading">
         <h2>Thesis exhibit</h2>
       </div>
 
       <div class="section--flexrow">
         <div class="col">
-          <div class="col__container">
-            <video class="video-container" controls>
-              <source class="video"src="./resources/videos/thesis.mp4" type="video/mp4">
+          <div class="col__container" role="region">
+            <video class="video-container" autoplay loop>
+              <source class="video" src="./resources/videos/thesis.mp4" type="video/mp4" alt="Video showing sunlight on a building while a day passes by">
                 You browser does not support HTML5 video
             </video>
-            <div class="text-box text-box--hide">
+            <div class="text-box text-box--hide" role="columnheader">
               <h2>Reimagine Urban</h2>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
@@ -232,9 +233,9 @@
         </div>
 
         <div class="col-s col--border col-s--hide">
-          <div class="col-s__container fisma">
+          <div class="col-s__container fisma" role="region">
             <div class="col-s__pic-container">
-                <img class="pic-desktop" src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
+                <img class="pic-desktop" src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma: A person highlighting information on a paper">
             </div>
             <div class="text-box text-box-s">
               <h3> Fisma </h3>
@@ -242,9 +243,9 @@
               <span class="link"><a href="#">Read more</a></span>
             </div>
           </div>
-          <div class="col-s__container now-and-then">
+          <div class="col-s__container now-and-then" role="region">
             <div class="col-s__pic-container">
-                <img class="pic-desktop" src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then">
+                <img class="pic-desktop" src="./resources/images/thesis-now-and-then.jpg" alt="Thesis now-and-then: A picture of the skyline of Manhatten">
             </div>
             <div class="text-box text-box-s">
               <h3> Now-and-then </h3>
@@ -259,9 +260,9 @@
 
     <!-- Footer section-->
 
-    <footer>
+    <footer role="contentinfo">
       <span class="copyright">&#169; 2016 Colmar Academy. All rights reserved</span>
-      <nav class="nav nav--alignitems nav--hide">
+      <nav class="nav nav--alignitems nav--hide" role="navigation">
         <span><a class="nav__link nav--padding nav--s-font" href="#">Terms<a/></span>
         <span><a class="nav__link nav--padding nav--s-font" href="#">Privacy</a></span>
       </nav>
